--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -1,1 +1,218 @@
 
+.gridcontainer {
+  display: grid;
+  grid-template-columns: 25% 75%;
+  grid-template-rows: 10% 25% 25% 25% 15%;
+  column-gap: 20px;
+  width: 1190px;
+  height: 750px; 
+  row-gap: 20px;
+}
+
+.movingimage {
+    background-image: url(../images/moving.jpg);
+    background-size: cover;
+    grid-column: 2 / 3;
+    grid-row: 2 / 5;
+}
+
+.maintext {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: rgb(112, 132, 150);
+    font-size: 50px;
+    font-family: 'Warnes', cursive;
+}
+
+.quotebutton {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    background-color: rgb(133, 128, 128);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    font-size: 25px;
+    font-family: 'Oswald', sans-serif;
+}
+
+
+.sideservices {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(236, 189, 57);
+    color: white;
+    font-size: 30px;
+    font-family: 'Oswald', sans-serif;
+}
+
+.sideabout {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(112, 132, 150);
+    color: white;
+    font-size: 30px;
+    font-family: 'Oswald', sans-serif;
+}
+
+.sidecontact {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(236, 189, 57);
+    color: white;
+    font-size: 30px;
+    font-family: 'Oswald', sans-serif;
+}
+
+.bottomtext {
+    grid-column: 1 / 3;
+    grid-row: 5 / 6;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    font-size: 35px;
+    font-family: 'Oswald', sans-serif;
+    color: rgb(112, 132, 150);
+}
+
+
+.sideservices:hover {
+    background-color: rgb(226, 161, 152);
+}
+
+.sidecontact:hover {
+    background-color: rgb(226, 161, 152);
+}
+
+.sideabout:hover {
+    background-color: rgb(226, 161, 152);
+}
+
+/*   MOBILE START HERE   */
+
+
+@media (max-width: 576px) {
+    .gridcontainer {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 10% 45% 10% 10% 10% 5%;
+        column-gap: 20px;
+        width: 520px;
+        height: 750px; 
+        row-gap: 10px; 
+    }
+}
+
+@media (max-width: 576px) {
+    .movingimage {
+        background-image: url(../images/moving.jpg);
+        background-size: cover;
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+        }
+}
+
+@media (max-width: 576px) {
+.maintext {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: rgb(112, 132, 150);
+    font-size: 30px;
+    font-family: 'Warnes', cursive;
+    }
+}
+
+@media (max-width: 576px) {
+    .quotebutton {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        background-color: rgb(133, 128, 128);
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: none;
+        font-size: 15px;
+        font-family: 'Oswald', sans-serif;
+    }
+}
+
+@media (max-width: 576px) {
+    .sideservices {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: rgb(236, 189, 57);
+        color: white;
+        font-size: 30px;
+        font-family: 'Oswald', sans-serif;
+    }
+}
+
+@media (max-width: 576px) {
+    .sideabout {
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: rgb(112, 132, 150);
+        color: white;
+        font-size: 30px;
+        font-family: 'Oswald', sans-serif;
+    }
+}
+
+@media (max-width: 576px) {
+    .sidecontact {
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: rgb(236, 189, 57);
+        color: white;
+        font-size: 30px;
+        font-family: 'Oswald', sans-serif;
+    }
+}
+
+@media (max-width: 576px) {
+    .bottomtext {
+        grid-column: 1 / 3;
+        grid-row: 6 / 7;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        font-size: 20px;
+        font-family: 'Oswald', sans-serif;
+        color: rgb(112, 132, 150);
+
+    }
+}
