--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -54,7 +54,6 @@ body {
 
 header {
   min-height: 75px;
-  /* width: 100vw; */
   grid-area: header;
   display: flex;
   overflow-wrap: break-word;
@@ -111,7 +110,7 @@ h2:hover {
     transform: translateX(0);
   }
 }
-@keyframes effect.5 {
+@keyframes effect5 {
   0% {
     transform: translatex(100%);
   }
@@ -149,6 +148,7 @@ h2:hover {
   border-bottom: cadetblue 10px solid;
 }
 
+/* This section is hidden until an side navigation button is clicked */
 .sect {
   display: none;
 }
@@ -209,7 +209,7 @@ h1:hover {
 .navlist:hover {
   opacity: 0.5;
 }
-
+/* Tablet view */
 @media (max-width: 768px) {
   .containerstyle {
     display: grid;
@@ -280,6 +280,7 @@ h1:hover {
   }
 }
 
+/* Phone view */
 @media (max-width: 576px) {
   .containerstyle {
     display: grid;
@@ -297,14 +298,14 @@ h1:hover {
   .navstyle {
     display: grid;
     grid-template-columns: 150px auto;
-    grid-template-rows: auto;
-
+    grid-template-rows: auto auto;
     grid-gap: 0;
     grid-template-areas:
       "nav header"
       "nav body2"
       "nav body3"
       "nav body4"
+      "nav footer"
       "nav footer";
   }
 
@@ -359,7 +360,5 @@ h1:hover {
   #navcol {
     padding: 3px;
   }
-  .chart2 {
-    opacity: 0.5;
-  }
+
 }
