--- a/02week/blog/css/style.css
+++ b/02week/blog/css/style.css
@@ -87,7 +87,7 @@ header {
     font-size: 50px;
     color: skyblue
   }
-  a:active {
+  footer a:visited {
     color: white;
   }
   /* .post:nth-child(odd) {
