--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,75 @@
+body{
+    background-color: #ddd;
+}
+
+.nav {
+    background-color: rgb(192, 192, 192);
+    overflow: hidden;
+}
+
+
+.nav a {
+    float: left;
+    color: #dd55a2;
+    text-align: center;
+    padding: 25px 15px;
+    text-decoration: none;
+    font-size: 17px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.nav a:hover {
+    background-color: #ddd;
+    color: rgb(104, 102, 102);
+}
+
+.nav a.active {
+    background-color: rgb(221, 153, 210);
+    color: white;
+}
+
+#block{
+    background-color: palevioletred;
+    width: 1465px;
+    float: left;
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 25px;
+    padding-right: 25px;
+    font-size: 80px;
+    font-style: italic;
+    color: aliceblue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+#block2{
+    float: right;
+    text-align: right;
+    font-style: italic;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Gill Sans', Calibri, 'Trebuchet MS', sans-serif; 
+    font-size: 30px;
+    background-color: rgb(93, 219, 177);
+    color: aliceblue;
+    padding-top: 228px;
+    padding-bottom: 228px;
+    padding-left: 78px;
+    padding-right: 15px;
+
+
+
+}
+#block3{
+    float: left;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 50px;
+    font-style: italic;
+    color: aliceblue;
+    background-color: lightcoral;
+    padding-top: 55px;
+    padding-bottom: 50px;
+
+}
 
