--- a/02week/site/css/style.css
+++ b/02week/site/css/style.css
@@ -43,6 +43,7 @@ border: 1px solid red
     nav .logo i {
       font-size: 65px;
       margin: 15% 0;
+    
     }
     nav ul {
       height: 100%;
@@ -59,6 +60,46 @@ border: 1px solid red
     }
     header {
       height: 100vh;
-      padding-top: 90px;
+      background: orange;
 
+    }
+    header.header_title {
+      background: #4c4d4e;
+      height: 50vh;
+      width: 100%;
+    }
+    header .parent_h1 {
+      background: red;
+      /* width: 50%;
+      height: 50%;
+      margin: 100px; */
+    }
+    header h1 {
+      position: absolute;
+      top: 25%;
+      bottom: 15%;
+      left: 15%;
+      right: 15%;
+    }
+    header section {
+      height: 100%;
+
+    }
+    header .firstSection {
+      float: left;
+      width: 30%;
+      background: red;
+    }
+    .secondSection {
+      float: left;
+      width: 30%;
+      background: yellow;
+    }
+    .thirdSection {
+      float: left;
+      width: 30%;
+      background: blue;
+    }
+    section {
+      height: 300px;
     }
