--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -1,1 +1,164 @@
+body {
+  background: #292929;
+  text-align: center;
+  font-weight: 400;
+  font-family:'Lato', sans-serif;
+  color: rgb(247, 72, 78);
+  margin: 0 auto;
+}
 
+header {
+  text-transform: uppercase;
+  margin: 5px;
+  padding:10px;
+  max-height: 50px;
+}
+
+h1 {
+  font-size: 18px;
+  border-bottom: 1px dotted whitesmoke;
+  padding:10px;
+  width: 300px; 
+  transform: rotate(25deg);
+  margin: 55px;
+}
+
+h2 {
+  font-size: 18px;
+  border-bottom: 1px dotted whitesmoke;
+  width: 200px; 
+  transform: rotate(25deg);
+  margin: 45px;
+}
+
+h3 {
+  display: none;
+  font-size: 20px;
+  
+}
+
+.icon-bar {
+  padding:6px;
+  margin:6px;
+  font-size: 18px;
+}
+
+.icons {
+  padding: 4px;
+  color:rgb(247, 72, 78);
+}
+
+
+main {
+  display: flex;
+  border-top: 1px solid #292929;
+  background-image: url("https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/276730/bada1fccb03558933157bfb473b80a0b251d3b7a.jpg");
+  background-position: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height:620px;
+  align-items: center;
+  justify-content: center;
+  color: whitesmoke;
+  font-size: 80px;
+  font-family: 'Homemade Apple', cursive;
+}
+
+section {
+  flex: 100%;
+}
+
+.grid-container {
+  background: #292929;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding:50px;
+  flex-wrap: wrap;
+    
+}
+
+.grid-item {
+ margin:0px;
+ 
+  
+}
+
+img {
+  width: 100%;
+  height: 200px;
+  opacity: .4;
+}
+
+img:hover {
+  transform: scale(1.4);
+  transition-duration: 1s;
+  opacity: 1;
+
+  
+}
+
+nav {
+  margin: 10px;
+  padding: 10px;
+}
+
+ul li {
+text-align: center;
+list-style-type: none;
+display: inline-block;    
+margin-top: 10px;
+   
+}
+
+a {
+text-decoration: none;
+color: rgb(247, 72, 78);
+
+}
+
+  li a {
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 14px;
+    color: rgb(247, 72, 78);
+    text-align: center;
+    
+  }
+  a:hover {
+    color:pink;
+  }
+
+  li:first-child:before {
+    content: '';
+}
+  li:before {
+    content: '/';
+    padding: 0 12px 0 9px;
+
+  }
+  
+  @media (max-width:600px) {  
+    .grid-container {
+     grid-template-columns: auto;
+     grid-auto-rows: minmax(100px, auto);
+     padding:10px;}
+
+    img:hover {
+     transform: none;
+     transition-duration: 1s;
+     opacity: 1;   
+      }
+    header, h2 {
+      display: none;
+    }  
+
+    h3 {
+      display: block;
+    }
+
+    nav {
+      display: flex;
+    }
+
+   }
+  
