--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -1,1 +1,59 @@
-
+h1  {
+    text-align: center;
+}
+h4  {
+    text-align: center;
+}
+.box  {
+    border: 1px solid black;
+    padding: 3px;
+    margin: 2px;
+}
+.boxA   {
+    grid-area: box1;
+}
+.boxB   {
+    grid-area: box2;
+}
+.boxC   {
+    grid-area: box3;
+}
+.boxD   {
+    grid-area: box4;
+}
+.boxE   {
+    grid-area: box5;
+}
+.boxF   {
+    grid-area: box6;
+}
+.boxG   {
+    grid-area: box7;
+}
+.boxH   {
+    grid-area: box8;
+}
+.boxI   {
+    grid-area: box9;
+}
+.boxJ   {
+    grid-area: box10;
+}
+.grid   {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+        "box1"
+        "box2"
+        "box3"
+        "box4"
+        "box5"
+        "box6"
+        "box7"
+        "box8"
+        "box9"
+        "box10";
+}
+@media (min-width:570px) {
+    
+}
