--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -1,1 +1,72 @@
 
+body {
+    margin: 0;
+    font-family: 'Open Sans';
+    border: 1px black solid;
+  }
+header {
+    background-color: lightgray;
+    border: 1px black solid;
+    height: 300px;
+}
+nav a {
+    padding: 5px;
+    margin: 2px;
+    text-decoration: none;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    border: 1px black solid;
+}
+a:hover {
+    color: black;
+    font-weight: bolder;
+}
+.titles {
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+}
+header div {
+    border: 1px black solid;
+    margin-top: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.projs {
+    width: 90%;
+    overflow: hidden;
+    padding: 20px 0px;
+    margin: 20px auto;
+}
+.projs ul{
+    margin: 0px;
+    padding: 0px;
+}
+.projs ul li {
+    width: 27%;
+    padding: 40px;
+    list-style: none;
+    float:  left;
+    height: 300px;   
+    border-width: 1px;
+    text-align: center
+}
+.projs ul li img{
+    border-width: 1px;
+    border-color: black;
+    border-style: solid;
+}
+.fa:hover {
+    opacity: 0.7;
+}
+.contact {
+    padding: 100px;
+    border: 1px black solid;
+}
+footer{
+    text-align: center;
+    padding: 40px;
+    border: 1px black solid;
+}
