created new airplane css changes and began the html format

--- a/02week/site/css/style.css
+++ b/02week/site/css/style.css
@@ -21,6 +21,7 @@ background-size: cover;
 }
 nav{
     height: 90px;
+    z-index: 1;
     width: 100%;
     display: block;
     position: fixed;
@@ -53,5 +54,48 @@ ul li {
 }
 header {
     height: 100vh;
-    padding-top: 90px;
+    background: white;
+    position: relative;
+}
+header .header__title {
+    background: #4c4d4e;
+    width: 100%;
+    display: inline-block;
+    position: absolute;
+    top: 25%;
+}
+header.parent__h1 {
+    background: red;
+    width: 50%;
+    height: 50%;
+    margin: 100px;
+
+}
+header h1 {
+    
+
+}
+header section{
+    height: 100%;
+}
+.firstSection {
+    /* float: left; */
+    width: 30%;
+    background: turquoise;
+
+}
+.secondSection {
+    /* float: left; */
+    width: 50%;
+    background: grey;
+}
+.thirdSection {
+    /* float: left; */
+    width: 30%;
+    background: purple;
+}
+
+section {
+    height: 300px;
+    /* display: inline-block */
 }
