revised airplane background settings in css

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -1,9 +1,9 @@
+html {
+  background: url(../img/airline.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
 body {
-  background-image: url(../img/airline.jpg);
-  font-family: 'Roboto', sans-serif;
-  background-repeat: no-repeat; 
-  width: 100%;
-  height: 100%;
+font-family: 'roboto';
 }
 header {
   display: flex;
@@ -20,8 +20,6 @@ header {
   color: #2C8D80;
 }
 main {
-  /* border: 1px solid black; */
-  /* display: flex; */
   width: 430px;
   height: 400px;
   margin-left: 5.5rem;
@@ -51,7 +49,6 @@ main {
 .boxes:nth-child(2) {
   margin-top: 15px;
 }
-
 input[placeholder="mm/dd/yyyy"] {
   font-weight: 900;
 }
@@ -68,9 +65,12 @@ input[placeholder="mm/dd/yyyy"] {
   display: flex;
   padding-top: 1em;
 }
+.passenger {
+  margin-left: 13px;
+}
 .passenger > input {
   padding: 15px 0;
-  width: 7em;
+  width: 6.7em;
   background: #193A55;
   text-align: center;
   color: #fff;
@@ -84,7 +84,7 @@ input[placeholder="mm/dd/yyyy"] {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 25px;
+  padding-left: 30px;
 }
 .searchBttn {
   display: flex;
@@ -97,4 +97,5 @@ input[placeholder="mm/dd/yyyy"] {
   padding: 15px 130px;
   background: #1563B7;
   margin-top: 30px;
+  border-radius: 5px;
 }
