--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -13,11 +13,61 @@ nav {
   height: 90px;
   width: 100%;
   background-color: #003757;
-  padding: 10px 15px
+  padding: 10px 15px;
+  display: inline-block;
 }
 nav ul {
   display: inline-block;
+  width: 50%;
+  float: right;
+  
 }
 nav li {
+  color: white;
+  display: inline;
+
+}
+nav li img {
+  height: 30%;
+  display: inline;
+
+}
+nav p {
   display: inline-block;
+  padding: 5%;
+
+}
+main {
+  border: 3px solid white;
+  width: 30%;
+  height: 500px;
+  margin: 10% auto;
+
+}
+main div.toprow {
+  border: 2px solid yellow;
+  width: 100%;
+  height: 10%;
+  align-content: center;
+}
+div.toprowleft {
+  width: 40%;
+  height: 100%;
+  background: blue;
+  display: inline-block;
+  float: left;
+}
+div.toprowright {
+  width: 60%;
+  height: 100%;
+  background: green;
+  display: inline-block;
+  float: right;
+}
+main div img.toprowleft {
+  margin: 0px 30%;
+
+}
+div.toprow img.toprowright {
+  margin: 0px 15%;
 }
