--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -1,4 +1,4 @@
-* {
+html,body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -15,10 +15,18 @@ nav {
     width: 100%;
     background-color: #113f5f;
     padding: 10px 15px;
+
 }
-nav ul {
-    display: inline-block;
+.navBar {
+    display: flex;
+    float: right;
+    height: 100%;
+    padding-right: 5%;
 }
-nav li {
+.navBar div {
   display: inline-block;
+  margin: auto;
+} 
+.divider {
+  padding: 0 10px;
 }
