--- a/02week/sites/css/style.css
+++ b/02week/sites/css/style.css
@@ -30,6 +30,7 @@ nav {
   padding: 10px 15px;
   background-color: rgba(0, 0, 0, 0.639);
   transition: background-color 0.3s ease;
+  z-index: 1;
 }
 
 nav:hover {
@@ -63,5 +64,57 @@ ul li{
 
 header {
   height: 100vh;
-  padding-top: 150px;
+  background: white;
+  position: relative;
+  
 }
+
+header .header_title {
+  background: aqua;
+  position: absolute;
+  /* height: 100%; */
+  display: inline-block;
+  width: 100%;
+  /* margin-top: 80px; */
+}
+
+header .parent_h1 {
+  background: red;
+  width: 50%;
+  height: 50%;
+  margin: 100px;
+  position: absolute;
+  text-align: center;
+}
+
+header h1 {
+  
+
+}
+
+header section {
+  height: 100%;
+}
+
+.firstSection {
+  /* float: left; */
+  width: 33%;
+  background-color: royalblue;
+}
+
+.secondSection {
+  /* float: left; */
+  width: 33%;
+  background-color: purple;
+}
+
+.thridSection {
+  /* clear: both; */
+  background-color: black;
+  /* float: left; */
+  width: 33%;
+}
+ header section {
+   height: 300px;
+   display: inline-block;
+ }
