--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -3,7 +3,7 @@ html {
   background-size: cover;
 }
 body {
-font-family: 'roboto';
+font-family: 'Roboto', sans-serif;
 }
 header {
   display: flex;
@@ -49,9 +49,6 @@ main {
 .boxes:nth-child(2) {
   margin-top: 15px;
 }
-input[placeholder="mm/dd/yyyy"] {
-  font-weight: 900;
-}
 .txtBox {
   margin: 10px 15px;
   padding: 15px;
@@ -60,6 +57,17 @@ input[placeholder="mm/dd/yyyy"] {
   border: 1px solid #fff;
   border-radius: 5px;
   font-weight: 900;
+}
+.dateBox {
+margin: 10px 15px;
+padding: 15px;
+background: #193A55;
+color: #fff;
+border: 1px solid #fff;
+width: 176px;
+height: 45px;
+border-radius: 5px;
+font-weight: 900;
 }
 .rowFour {
   display: flex;
