I know its not perfect but I'm trying to recreate the form with out cheating and looking at what we did Thursday

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -4,8 +4,8 @@
   box-sizing:border-box;
 }
 body {
-  background-image: url(../img/airline.jpg);
-  background-color: blue;
+  /* background-image: url(../img/airline.jpg); */
+  background-color: white;
   background-size: cover;
 
 }
@@ -51,12 +51,16 @@ main div.toprow {
   height: 10%;
   align-content: center;
 }
+section {
+  width: 50%;
+  float: left;
+}
 div.toprowleft {
   width: 40%;
   height: 100%;
   background: blue;
   display: inline-block;
-  float: left;
+  
 }
 div.toprowright {
   width: 60%;
@@ -72,3 +76,47 @@ main div img.toprowleft {
 div.toprow img.toprowright {
   margin: 0px 15%;
 }
+div.left {
+  width: 100%;
+  height: 75%;
+  border: 2px solid white;
+  padding: 5px;
+  align-content: center;
+  float: left;
+  
+}
+#depart {
+  margin: 5%;
+  text-align: center;
+  
+  
+}
+#depart::placeholder {
+  color: black;
+  font-size: 30px;
+}
+#date {
+  padding: 5%;
+}
+#passenger {
+  color: white;
+  margin: 5%;
+  font-size: 30px;
+}
+#passenger option selected {
+  color: black;
+}
+article {
+  padding: 10px 10px;
+  display: inline-block;
+
+}
+button {
+  font-size: 16px;
+  background-color: blue;
+  color: white;
+  height: 60px;
+  width: 400px;
+
+}
+
