--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -4,17 +4,22 @@
   box-sizing:border-box;
 }
 body {
-  /* background-image: url(../img/airline.jpg); */
+  background-image: url(../img/airline.jpg);
   background-color: white;
   background-size: cover;
+  
 
 }
+header {
+  border-bottom: 2px solid white;
+}
 nav {
-  height: 90px;
+  height: 100px;
   width: 100%;
   background-color: #003757;
   padding: 10px 15px;
   display: inline-block;
+  /* border-botttom: 2px solid white; */
 }
 nav ul {
   display: inline-block;
@@ -36,30 +41,43 @@ nav p {
   display: inline-block;
   padding: 5%;
 
+
 }
 main {
   border: 3px solid white;
-  width: 30%;
-  height: 500px;
+  width: 28%;
+  height: 390px;
   margin: 10% auto;
   background:rgb(17, 32, 100);
-
+  /* border: 3px solid pink; */
+  margin-top: 80px;
+  margin-left: 100px;
+  display: inline-block;
+}
+main p {
+  float: left
 }
 main div.toprow {
-  border: 2px solid yellow;
+  /* border: 2px solid yellow; */
   width: 100%;
-  height: 10%;
+  height: 12%;
   align-content: center;
+  display: inline-block;
 }
 section {
+  border: 2px solid pink;
+  height: 220px;
   width: 50%;
+  margin-top: 20px;
   float: left;
+  display: inline-block;
 }
 div.toprowleft {
   width: 40%;
   height: 100%;
   background: blue;
   display: inline-block;
+  
   
 }
 div.toprowright {
@@ -71,18 +89,21 @@ div.toprowright {
 }
 main div img.toprowleft {
   margin: 0px 30%;
+  display: inline-block;
 
 }
 div.toprow img.toprowright {
   margin: 0px 15%;
 }
-div.left {
-  width: 100%;
+section div .left{
+  width: 50%;
   height: 75%;
-  border: 2px solid white;
-  padding: 5px;
+  /* border: 2px solid white; */
+  /* padding: 5px; */
   align-content: center;
   float: left;
+  display: inline-block;
+
   
 }
 #depart {
@@ -92,31 +113,77 @@ div.left {
   
 }
 #depart::placeholder {
-  color: black;
+  background: rgb(17, 32, 100);
+  color: white;
+  border: 1px solid white;
+  /* color: b; */
   font-size: 30px;
 }
+
 #date {
   padding: 5%;
 }
-#passenger {
+div #passenger {
   color: white;
   margin: 5%;
-  font-size: 30px;
+  font-size: 25px;
+  font-weight: bold;
+  border: 2px solid yellow;
+  display: inline;
 }
-#passenger option selected {
-  color: black;
+option   {
+  color: black !important;
 }
-article {
-  padding: 10px 10px;
+#radio {
+  border: 2px solid yellow;
+  /* height: 150px; */
+  align-content: center;
+  color: white;
   display: inline-block;
-
+  
+}
+input {
+  margin-top: 30px;
+  padding: 10px
+}
+label {
+  /* padding: 10%; */
+  font-size: 20px;
+  font-weight: bold;
+  
+}
+/* section .button {
+  /* padding: 10px 10px; */
+  /* width: 200px;
+  height: 78px;
+  display: inline;
+  margin-top: 180px;
+  margin-bottom: 20px;
+  border: 10px solid pink; */
+  /* padding-bottom: 30% */
+/* } */ 
+#button{
+  /* border: 3px solid salmon; */
+  display: inline-block;
+  /* width: inherit; */
+  height: 70px;
+  margin-left: 40px;
+  /* padding: 10% */
+  /* padding: 10%; */
+  /* align-content: center; */
 }
 button {
+  /* margin: 0 35px 0 40px; */
+  /* border: 3px solid pink; */
+  display: inline;
   font-size: 16px;
   background-color: blue;
   color: white;
   height: 60px;
   width: 400px;
+  border-radius: 4px;
+  margin-bottom: 40px;
+ 
 
 }
 
