took off the borders and deleted a section so my button div is just solitaire in the main

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -44,7 +44,7 @@ nav p {
 
 }
 main {
-  border: 3px solid white;
+  /* border: 3px solid white; */
   width: 28%;
   height: 390px;
   margin: 10% auto;
@@ -53,6 +53,7 @@ main {
   margin-top: 80px;
   margin-left: 100px;
   display: inline-block;
+  align-content: center;
 }
 main p {
   float: left
@@ -65,12 +66,13 @@ main div.toprow {
   display: inline-block;
 }
 section {
-  border: 2px solid pink;
+  /* border: 2px solid pink; */
   height: 220px;
   width: 50%;
   margin-top: 20px;
   float: left;
   display: inline-block;
+  align-content: center;
 }
 div.toprowleft {
   width: 40%;
@@ -128,14 +130,14 @@ div #passenger {
   margin: 5%;
   font-size: 25px;
   font-weight: bold;
-  border: 2px solid yellow;
+  /* border: 2px solid yellow; */
   display: inline;
 }
 option   {
   color: black !important;
 }
 #radio {
-  border: 2px solid yellow;
+  /* border: 2px solid yellow; */
   /* height: 150px; */
   align-content: center;
   color: white;
@@ -167,7 +169,7 @@ label {
   display: inline-block;
   /* width: inherit; */
   height: 70px;
-  margin-left: 40px;
+  margin-left: 30px;
   /* padding: 10% */
   /* padding: 10%; */
   /* align-content: center; */
@@ -178,12 +180,13 @@ button {
   display: inline;
   font-size: 16px;
   background-color: blue;
+  font-weight: bold;
   color: white;
   height: 60px;
   width: 400px;
   border-radius: 4px;
   margin-bottom: 40px;
- 
+  margin-right: 20px;
 
 }
 
