made the drop down the right color

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -116,7 +116,7 @@ section div .left{
 }
 #depart::placeholder {
   background: rgb(17, 32, 100);
-  color: white;
+  color: grey;
   border: 1px solid white;
   /* color: b; */
   font-size: 30px;
@@ -125,9 +125,16 @@ section div .left{
 #date {
   padding: 5%;
 }
-div #passenger {
+p.passengers {
   color: white;
+  /* border: 1px solid pink; */
+  font-weight: bold;
   margin: 5%;
+  padding-top: 6px;
+}
+div #passenger {
+  /* color: white; */
+  margin: 5% 2%;
   font-size: 25px;
   font-weight: bold;
   /* border: 2px solid yellow; */
