--- a/07week/dom-practice/css/style.css
+++ b/07week/dom-practice/css/style.css
@@ -1,14 +1,24 @@
 ul{
     list-style-type: none;
 }
+li{
+    margin-bottom: 5px;
+}
 
 .plus_minus{
-    font-size: 25pt;
+    display: inline-block;
+    font-size: 15pt;
     font-weight: bolder;
+    text-align: center;
     cursor: pointer;
-    color: blue;
-    margin-left: 5px;
+    color: white;
+    width: 35px;
     margin-right: 5px;
-    
-    
+    border-radius: 4px;
+}
+.plus{
+    background-color: dodgerblue;
+}
+.minus{
+    background-color: red;
 }
