--- a/07week/dom-practice/css/style.css
+++ b/07week/dom-practice/css/style.css
@@ -5,6 +5,10 @@ li{
     margin-bottom: 5px;
 }
 
+#plus_first{
+    margin-bottom: 5px;
+}
+
 .plus_minus{
     display: inline-block;
     font-size: 15pt;
@@ -12,7 +16,8 @@ li{
     text-align: center;
     cursor: pointer;
     color: white;
-    width: 35px;
+    width: 25px;
+    height: 25px;
     margin-right: 5px;
     border-radius: 4px;
 }
@@ -21,4 +26,15 @@ li{
 }
 .minus{
     background-color: red;
+}
+
+.imageclass{
+    opacity: 0;
+    display: block;
+    transition: 2s;
+}
+
+li:hover .imageclass{
+    opacity:1;
+    transition: 2s;
 }
