--- a/07week/dom-practice/css/style.css
+++ b/07week/dom-practice/css/style.css
@@ -8,7 +8,7 @@ ul li {
     padding: 0 2px;
 }
 
-ul li span.delete {
+ul li span {
     position: relative;
     float: right;
     margin-right: 5px;
