starting blenders eyewear

--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,36 @@
-
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+nav.black {
+  background: black;
+  color: white;
+  text-align: center;
+  height: 55px;
+}
+p.black {
+  font-weight: bold;
+  padding: 20px;
+  letter-spacing: 2px;
+}
+nav.white {
+  height: 55px;
+  width: 100%;
+  display: inline-block;
+  border-bottom: 2px solid black;
+}
+p.white {
+  font-weight: bold;
+  letter-spacing: 1px;
+  float: left;
+  font-size: 20px;
+  
+}
+article {
+  float: right;
+  
+}
+div.select {
+  float: right;
+}
