airplane assignment-almost finished

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -30,3 +30,77 @@ nav {
 .divider {
   padding: 0 10px;
 }
+.container {
+  height: 100%;
+}
+.airline__container {
+  border: 1px solid red;
+  height: 350px;
+  width: 500px;
+  margin-top: 30px;
+  margin-left: 50px;
+  border-radius: 4px;
+}
+.airplanecontainer__row {
+  border: 1px solid blue;
+}
+.row1 {
+  height: 75px;
+  width: 100%;
+}
+.row2 {
+  height: 200px;
+
+}
+.row3 {
+  height: 75px;
+  padding: 0 15px;
+}
+.icon__col {
+  border: 1px solid pink;
+  background: blue;
+  display: inline-block;
+  float: left;
+  height: 100%;
+  width: 30%;
+  text-align: center;
+  padding: 10px 0 0;
+}
+.col1 {
+  background-color: green;
+}
+button {
+  width: 100%;
+  height: 50%;
+  margin-top: 15px;
+  background-color: blue;
+  color: white;
+  border: none;
+  border-radius: 4px;
+
+}
+.input {
+outline-color: none;
+}
+.imput__row {
+  border: 1px solid red;
+}
+.imput__row input {
+  width: 40%;
+
+}
+.imput__row input:nth-child(2) {
+  margin-left: 15px;
+}
+.checkbox__div {
+  display: inline;
+  border: 1px solid blue;
+  float: right;
+}
+.checkbox__div span input {
+  width: 20px;
+  color: white;
+}
+.item3 input {
+  width: 50px;
+}
