--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   border: 0;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 nav.black {
   background: black;
@@ -21,16 +22,20 @@ nav.white {
   border-bottom: 2px solid black;
 }
 p.white {
-  font-weight: bold;
+  /* font-weight: bold; */
   letter-spacing: 1px;
   float: left;
   font-size: 20px;
+  margin-left: 10px;
   
 }
 article {
   float: right;
   
 }
-div.select {
+div.dropdown {
   float: right;
+}
+.dropdown-content {
+  
 }
