--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -38,8 +38,85 @@ nav a {
   float: right;
   position: static;
 }
+.container {
+  height: 100%;
+  border: 3px dotted black;
+}
 
-main {
+.airline_container {
+  border: 1px solid red;
+  height: 350px;
+  width: 500px;
+  margin-top: 30px;
+  margin-left: 50px;
+  border-radius: 10px;
+}
+
+.airline__container--row {
+  border: 1px solid blue;
+}
+
+.row1 {
+  height: 75px;
+  width: 100%;
+}
+.row2 {
+  height: 200px;
+}
+
+.row3 {
+  height: 75px;
+  padding: 0 15px;
+}
+
+.icon_col {
+  border: 1px solid pink;
+  background: #193A55;
+  display: inline-block;
+  height: 100%;
+  width: 33%;
+  text-align: center;
+  padding: 10px 0 0;
+  float: left;
+}
+
+.col1 {
+background-color: green;
+}
+
+button {
+  width: 100%;
+  height: 50%;
+  margin-top: 15px;
+  color: white;
+  background-color: blue;
+  border: none;
+  border-radius: 4px;
+}
+
+.input__row {
+  border:  1px solid red;
+}
+
+.input__row input {
+  width: 40%;
+}
+.input__row input:nth-child(2) {
+  margin-left: 15px;
+}
+
+.checkbox__div {
+  display: inline;
+  border: 1px solid blue;
+  float: right;
+}
+
+.checkbox__div span input {
+  width: 20px;
+
+}
+
+/* main {
  height: 100vh;
 }
 
@@ -47,7 +124,7 @@ main {
 .wrapper {
   /* display: block; */
   /* clear:both; */
-}
+/* }
 
 .box {
   background-color: #193A55;
@@ -57,7 +134,7 @@ main {
   margin-left: 50px;
   float: left;
   border-radius: 5px;
-}
+} */
 
 /* .button {
   width: 50px;
@@ -66,18 +143,18 @@ main {
 } */
 
 
-.plane {
+/* .plane {
   width: 92px;
   margin-bottom: 25px;
   /* margin-top: 0px;
   margin-left: 0px; */
-  background: transparent;
-  border: none;
-  background-color: blue;
+  /* background: transparent; */
+  /* border: none; */
+  /* background-color: blue; */
   /* padding: 0px; */
-  display: inline-block;
-  border-radius: 5px;
-}
+  /* display: inline-block; */
+  /* border-radius: 5px;
+} 
 
 .hotel {
   width:150px;
@@ -88,9 +165,9 @@ main {
   padding: 0px;
   border-radius: 5px;
 
-}
+} 
 
-.car {
+/* .car {
   width:150px;
   margin: 0px;
   background: transparent;
@@ -138,9 +215,9 @@ input {
   margin-top: 0px;
   height: 30px;
   width: 30px;     
-  
-}
-.search {
+/*    */
+/* } */
+/* .search {
   margin-left: 130px;
   margin-top: 30px;
   border-radius: 5px;
@@ -165,8 +242,8 @@ input {
   cursor: pointer;
   font-size: 15px;
   color: white;
-}
-
+} */
+/* 
 .container2 {
   position: relative;
   padding-left: 50px;
@@ -174,9 +251,9 @@ input {
   cursor: pointer;
   font-size: 15px;
   color: white;
-  display: inline-block;
+  display: inline;
   float: right;
-}
+} */
 
 /* article {
   float: left;
