added mediaquery for mobile on NASA

--- a/04week/nasa/css/style.css
+++ b/04week/nasa/css/style.css
@@ -95,3 +95,30 @@ h3:not(.lowercase) {
   font-size: 14px;
   border: none;
 }
+ 
+@media only screen and (max-width: 576px) {
+  html {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  header {
+    width: 560px;
+    height: 500px;
+    background-image: url("https://unsplash.com/photos/Q1p7bh3SHj8/download?force=true");
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* margin: 10px 20px; */
+  }
+  footer {
+    display: flex;
+    flex-direction: column;
+    background: #E6E6E6;
+    height: 680px;
+    width: 560px;
+    align-items: center;
+    justify-content: center;
+  }
+}
